 * Terrain:
   * Improve appearance of sand near dirt with transitions
 * User interface:
   * Trying to initiate movement (or an attack) before previous movement is
     finished no longer unselects the current unit (bug #19734). (The new
     movement command is still deliberately ignored.)
   * Fixed bug #19783: Disable commands while WML menu items are executing.
 * WML engine:
   * Fixed CALL_FUNCTION macro (bug #19805)
 * Miscellaneous and bug fixes:
   * Fix bug #19753, missing hex transition
   * Fixed: Allow strict compilation with CMake using the upcoming gcc-4.8.
   * Fixed bug #19795: OOS when [message][option] is used in a (single-player)
     start event when side 1's controller is null.

Version 1.10.3:
 * Campaigns:
   * Heir to the Throne:
     * Fixed bug #19531: scroll to reinforcement units in Blackwater Port
     * Fixed bug #19517: The injured sergeant in HttT: Cliffs of Thoria will now
       always become visible when he is discovered.
   * Under the Burning Suns:
     * Made it so that all units are rehydrated quietly upon victory in scenario
       two
   * Under the Burning Suns:
     * Fix bug #19630: unit lost when Nym returns
     * Dust Devil no longer comments on cuttlefish
     * Wolf Riders now utter fleeing message on easy in scenario 3
 * Editor:
   * Improved performance of the Editor Settings ToD lighting controls
 * Language and i18n:
   * Fixed untranslatable Cancel button label in the add-ons server network
     status dialog (bug #19659)
   * Updated translations: Chinese (Simplified), Finnish, French, Galician,
     Irish, Italian, Korean, Latin, Old English, Portuguese (Brazil), Russian
 * Multiplayer:
   * A New Land:
     * Made it so that the "Elvish Shaman" option in the elvish unit selection
       menu gets translated. Fixes bug #19677.
 * User interface:
   * Stop showing a unit's potential moves before moving in a move & attack,
     rather than after (more consistent with regular movement)
 * Whiteboard: