@@ -21,6 +21,7 @@ Version 1.10.3+svn:
      finished no longer unselects the current unit (bug #19734). (The new
      movement command is still deliberately ignored.)
    * Fixed bug #19783: Disable commands while WML menu items are executing.
+   * Fixed bug #19533: Both damage tooltips now take into account local factors.
  * WML engine:
    * Fixed CALL_FUNCTION macro (bug #19805)
  * Miscellaneous and bug fixes:
